--- a/css/styles.css
+++ b/css/styles.css
@@ -205,6 +205,39 @@ video {
   background: rgba(0, 0, 0, 0.3);
 }
 
+/* about page css*/
+
+.about-page {
+  padding: 2rem 1rem 10rem 1rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  height: 100%;
+}
+
+.about-text {
+  margin: 0 auto;
+}
+
+.about-text h1 {
+  font-size: 2rem;
+  line-height: 2rem;
+}
+
+.about-image img {
+  height: 100%;
+  object-fit: cover;
+}
+
+.about-social {
+  display: flex;
+  justify-content: start;
+}
+
+.about-social a {
+  color: black;
+  padding: 1rem 0 0 1rem;
+}
+
 /* footer nav extra styles */
 .footer-logo {
   white-space: nowrap;
@@ -250,6 +283,22 @@ video {
     font-size: 2rem;
     line-height: 2rem;
   }
+
+  .about-page {
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem;
+  }
+
+  .about-text h1 {
+    font-size: 3rem;
+    line-height: 3rem;
+  }
+
+  .about-text p {
+    font-size: 1.1rem;
+    line-height: 1.3rem;
+  }
+
   .footer-nav {
     padding-top: 2rem;
   }
@@ -281,6 +330,14 @@ video {
   }
   .hero-nav {
     width: 100%;
+  }
+  .about-text h1 {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+  .about-text p {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
   .footer-nav {
     justify-content: space-evenly;
