--- a/css/styles.css
+++ b/css/styles.css
@@ -237,6 +237,57 @@ video {
   color: black;
   padding: 1rem 0 0 1rem;
 }
+/* begin grid gallery styles */
+
+.gallery-page {
+  padding: 0 1rem 10rem 1rem;
+}
+
+.portfolio-gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 0.5rem;
+  /* something in here is weird */
+  grid-auto-rows: 300px;
+}
+
+.gallery-item {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+.gallery-img {
+  height: 100%;
+  object-fit: cover;
+  transition: 0.5s ease-in-out;
+}
+
+.gallery-img:hover {
+  transform: scale(1.5);
+}
+
+.gallery-span {
+  grid-template-columns: 1fr;
+  grid-auto-flow: dense;
+}
+
+.w-1,
+.w-2,
+.w-3,
+.w-4,
+.w-5,
+.w-6 {
+  grid-column: span 1;
+}
+.h-1,
+.h-2,
+.h-3,
+.h-4,
+.h-5,
+.h-6 {
+  grid-row: span 1;
+}
 
 /* footer nav extra styles */
 .footer-logo {
@@ -283,22 +334,58 @@ video {
     font-size: 2rem;
     line-height: 2rem;
   }
-
   .about-page {
     grid-template-columns: 1fr 1fr;
     grid-gap: 1rem;
   }
-
   .about-text h1 {
     font-size: 3rem;
     line-height: 3rem;
   }
-
   .about-text p {
     font-size: 1.1rem;
     line-height: 1.3rem;
   }
-
+  /* grid column and row spans for wider screens */
+  .w-1 {
+    grid-column: span 1;
+  }
+  .w-2 {
+    grid-column: span 2;
+  }
+  .w-3 {
+    grid-column: span 3;
+  }
+  .w-4 {
+    grid-column: span 4;
+  }
+  .w-5 {
+    grid-column: span 5;
+  }
+  .w-6 {
+    grid-column: span 6;
+  }
+  .h-1 {
+    grid-row: span 1;
+  }
+  .h-2 {
+    grid-row: span 2;
+  }
+  .h-3 {
+    grid-row: span 3;
+  }
+  .h-4 {
+    grid-row: span 4;
+  }
+  .h-5 {
+    grid-row: span 5;
+  }
+  .h-6 {
+    grid-row: span 6;
+  }
+  .gallery-span {
+    grid-template-columns: repeat(6, 1fr);
+  }
   .footer-nav {
     padding-top: 2rem;
   }
