--- a/css/styles.css
+++ b/css/styles.css
@@ -289,6 +289,79 @@ video {
   grid-row: span 1;
 }
 
+/* styles for embedded shop page */
+
+.shop-page {
+  padding: 2rem 1rem 10rem 1rem;
+}
+.shop-page h1 {
+  font-size: 3rem;
+  line-height: 3rem;
+}
+.shop-page .text-box {
+  max-width: 80ch;
+  margin: 0 auto;
+}
+.shop-box {
+  width: 266px;
+  margin: 0 auto;
+}
+.shop-box iframe {
+  width: 100%;
+  height: 2749px; /* jimmy's measurement for 12 items */
+}
+
+@media (min-width: 506px) {
+  .shop-box {
+    width: 506px;
+  }
+  .shop-box iframe {
+    height: 1417px; /* 6 items tall */
+  }
+}
+@media (min-width: 746px) {
+  .shop-box {
+    width: 746px;
+  }
+  .shop-box iframe {
+    height: 973px; /* 4 items tall*/
+  }
+}
+@media (min-width: 986px) {
+  .shop-box {
+    width: 986px;
+  }
+  .shop-box iframe {
+    height: 751; /* 3 items tall */
+  }
+}
+@media (min-width: 1226px) {
+  .shop-box {
+    width: 1226px;
+  }
+  .shop-box iframe {
+    height: 751; /* 3 items tall */
+  }
+}
+
+.curated-shop {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 1rem;
+}
+
+.shop-item p {
+  margin: 0;
+}
+
+.shop-item h2 {
+  margin: 0;
+}
+
+.shop-item a {
+  color: black;
+}
+
 /* footer nav extra styles */
 .footer-logo {
   white-space: nowrap;
