--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body {
   margin: 0 auto;
   padding: 0;
   min-height: 100%;
+  background-color: black;
 }
 
 *,
@@ -34,7 +35,7 @@ video {
   align-items: center;
   line-height: 1rem;
   overflow: hidden;
-  background-color: white;
+  background-color: black;
   z-index: 10;
 }
 
@@ -74,7 +75,7 @@ video {
   text-decoration: none;
   letter-spacing: 0.2rem;
   padding: 0.8rem;
-  color: black;
+  color: white;
 }
 
 .logo a {
@@ -90,7 +91,8 @@ video {
 }
 
 .nav-menu a:hover {
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid none;
+  transform: scale(0.95);
 }
 
 /* hero header nav changes (z-index was deleted right after in the video?) */
@@ -112,6 +114,7 @@ video {
 
 .hero-nav .nav-menu a:hover {
   border-bottom: 1px solid white;
+  transform: scale(0.95);
 }
 
 .hero-nav .nav-menu a {
@@ -200,6 +203,7 @@ video {
 
 .hero-button:hover {
   transform: scale(0.95);
+  color: red;
 }
 .hero-button:active {
   background: rgba(0, 0, 0, 0.3);
@@ -208,34 +212,45 @@ video {
 /* about page css*/
 
 .about-page {
-  padding: 2rem 1rem 10rem 1rem;
+  padding: 3rem 1rem 10rem 1rem;
   display: grid;
   grid-template-columns: 1fr;
   height: 100%;
+  color: white;
 }
 
 .about-text {
   margin: 0 auto;
+  color: white;
+  padding-top: 0.5rem;
 }
 
 .about-text h1 {
   font-size: 2rem;
   line-height: 2rem;
+  padding-bottom: 0.5rem;
+  color: lightslategray;
+}
+.about-text a {
+  color: red;
+  text-decoration: underline;
+  font-size: 1.5rem;
+  text-transform: capitalize;
 }
 
 .about-image img {
   height: 100%;
   object-fit: cover;
 }
-
-.about-social {
+.about-image .about-social {
   display: flex;
   justify-content: start;
 }
 
 .about-social a {
-  color: black;
-  padding: 1rem 0 0 1rem;
+  color: lightslategray;
+  padding: 0 0 0 0.5rem;
+  border-top: 1rem;
 }
 /* begin grid gallery styles */
 
@@ -246,7 +261,7 @@ video {
 .portfolio-gallery {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 0.5rem;
+  grid-gap: 4rem;
   /* something in here is weird */
   grid-auto-rows: 300px;
 }
@@ -255,6 +270,16 @@ video {
   height: 100%;
   width: 100%;
   overflow: hidden;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+  padding-bottom: 5rem;
+}
+.gallery-item p {
+  color: lightslategray;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+  line-height: 1.5rem;
 }
 
 .gallery-img {
@@ -293,6 +318,7 @@ video {
 
 .shop-page {
   padding: 2rem 1rem 10rem 1rem;
+  align-content: center;
 }
 .shop-page h1 {
   font-size: 3rem;
@@ -301,14 +327,28 @@ video {
 .shop-page .text-box {
   max-width: 80ch;
   margin: 0 auto;
+  color: white;
+  text-align: center;
 }
 .shop-box {
   width: 266px;
   margin: 0 auto;
+  align-items: center;
 }
 .shop-box iframe {
   width: 100%;
   height: 2749px; /* jimmy's measurement for 12 items */
+}
+.shop-item {
+  color: white;
+  align-content: center;
+  align-items: center;
+}
+.shop-item h2 {
+  color: red;
+  padding-bottom: 0.5rem;
+  padding-top: 0.5rem;
+  padding-left: 0.5rem;
 }
 
 @media (min-width: 506px) {
@@ -359,7 +399,7 @@ video {
 }
 
 .shop-item a {
-  color: black;
+  color: lightslategray;
 }
 
 /* footer nav extra styles */
@@ -374,13 +414,15 @@ video {
 }
 
 .footer-social a {
-  color: black;
+  color: white;
   padding: 0 1rem;
 }
 
 .footer-copyright {
   text-align: center;
   padding-bottom: 6rem;
+  color: white;
+  text-decoration: underline;
 }
 
 @media (min-width: 600px) {
